# mina_v1

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
agent_service/: .env.example  pyproject.toml
agent_service/src/mina_agent/: __init__.py  __main__.py  app.py  body_agent.py  config.py  context.py  deepseek.py  harness.py  logging_config.py  mcp.py  memory.py  minecraft_knowledge.py  policy.py  schemas.py  searxng.py  session_queue.py  tasks.py  tools.py  turn_runtime.py  web_fetch.py
agent_service/src/mina_agent/dev/: __init__.py  fake_deepseek.py  fake_searxng.py  game_e2e.py  scripted_sidecar.py
agent_service/src/mina_agent/e2e/: __init__.py  manifest.py  runner.py  scenarios.py  trace.py
agent_service/tests/: test_app.py  test_context.py  test_deepseek_payload.py  test_e2e_runner.py  test_e2e_trace.py  test_game_e2e_trace.py  test_harness.py  test_logging_config.py  test_mcp.py  test_memory.py  test_policy.py  test_searxng.py  test_session_queue.py  test_tools.py  test_turn_runtime.py
docs/: manual-test-fix-items.md
src/client/java/com/mina/client/: MinaClient.java
src/main/java/com/mina/: MinaMod.java
src/main/java/com/mina/config/: MinaConfig.java
src/main/java/com/mina/game/: MinaActionExecutor.java  MinaActionMonitor.java  MinaChat.java  MinaCommands.java  MinaCompanionTicker.java  MinaSnapshotter.java  MinaTestCommands.java  MinaTurnController.java
src/main/java/com/mina/net/: SidecarClient.java
src/main/resources/: fabric.mod.json
src/main/resources/assets/mina/lang/: en_us.json
